EDU-1230 Bonus commit: correct reported typo

--- a/src/plugins/separator/separator.yml
+++ b/src/plugins/separator/separator.yml
@@ -4,7 +4,7 @@ separator:
     de: Trennlinie
   titlePosition:
     en: Title position
-    de: Titleposition
+    de: Titelposition
   titlePosition_left:
     en: left
     de: Links
