--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "plyr": "^3.7.3",
     "pretty-bytes": "^6.0.0",
     "prop-types": "^15.8.1",
+    "rc-util": "^5.29.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-beforeunload": "^2.5.3",
