EDU-1249 Show media library metadata of initial url

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -547,8 +547,8 @@ common:
     en: Drag a different file here
     de: Ziehe eine andere Datei hierher
   useSearchToChangeFile:
-    en: Use the search above to select a different file
-    de: Benutze die Suche oben, um eine andere Datei auszuwählen
+    en: Use the search above to select a different file.
+    de: Benutze die Suche oben, um eine andere Datei auszuwählen.
   searchInvitationDescription:
     en: Enter your search term above
     de: Gib deinen Suchbegriff oben ein
