EDU-1249 Make resource type selector an OR input

--- a/src/components/resource-selector/shared/resource-search-bar.yml
+++ b/src/components/resource-selector/shared/resource-search-bar.yml
@@ -1,4 +1,4 @@
 resourceSearchBar:
-  searchTerm:
-    en: Search term
-    de: Suchbegriff
+  searchTerms:
+    en: Search terms
+    de: Suchbegriffe
