EDU-1254 Improve message board display

--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -47,6 +47,13 @@ room:
   messageBoardSectionHeadline:
     en: Message board
     de: Message-Board
+  messageBoardOwnerInfoMarkdown:
+    en: |
+      As the room owner, you can post messages to the board in order to inform room members about various room related topics.\
+      Members see the message board on the room page and they receive a notification and, optionally, an email, when a new message is posted.
+    de: |
+      As the room owner, you can post messages to the board in order to inform room members about various room related topics.\
+      Members see the message board on the room page and they receive a notification and, optionally, an email, when a new message is posted.
   postMessageButtonText:
     en: Post message
     de: Nachricht abschicken
