--- a/package.json
+++ b/package.json
@@ -95,14 +95,13 @@
     "react-pdf": "^6.2.0",
     "react-region-select": "^2.3.0",
     "read-all-stream": "^3.1.0",
+    "sax": "^1.2.4",
     "serialize-error": "^11.0.0",
     "spdx-license-list": "^6.6.0",
     "stream-to-array": "^2.3.0",
     "thenby": "^1.3.4",
     "toad-scheduler": "^2.2.0",
-    "umzug": "^3.2.1",
-    "xmldom": "^0.6.0",
-    "xpath": "^0.0.32"
+    "umzug": "^3.2.1"
   },
   "devDependencies": {
     "@educandu/dev-tools": "^8.0.0",
