EDU-1246 Improve favorite tooltip text and streamline utils name

--- a/src/components/pages/document.yml
+++ b/src/components/pages/document.yml
@@ -8,11 +8,14 @@ document:
   commentsPanelTitle:
     en: You are viewing the document page in "comments" mode
     de: Du befindest dich im Kommentar-Modus
+  favoriteRestrictionTooltip:
+    en: Log in to add the document to your favorites
+    de: Melde dich an, um dieses Dokument zu den Favoriten hinzufügen
   duplicateRestrictionTooltip:
-    en: Log in in order to duplicate this document
+    en: Log in to duplicate this document
     de: Melde dich an, um dieses Dokument zu duplizieren
   editRestrictionTooltip_anonymous:
-    en: Log in in order to edit this document
+    en: Log in to edit this document
     de: Melde dich an, um dieses Dokument zu bearbeiten
   editRestrictionTooltip_protected:
     en: This document cannot be edited because it is protected
@@ -41,18 +44,15 @@ document:
   saveChanges:
     en: Save changes
     de: Änderungen speichern
-  editActionTooltip:
-    en: Open edit mode
-    de: Bearbeitungs-Modus öffnen
   comments:
     en: Comments
     de: Komentare
   commentsActionTooltip:
-    en: Open comments mode
-    de: Komentar-Modus öffnen
+    en: Show comments
+    de: Komentare anzeigen
   history:
     en: Version history
     de: Versionshistorie
   historyActionTooltip:
-    en: Open version history mode
-    de: Versionshistorie-Modus öffnen
+    en: Show version history
+    de: Versionshistorie anzeigen
