NOTICKET: Fix words that are too short

--- a/src/components/pages/document.yml
+++ b/src/components/pages/document.yml
@@ -10,7 +10,7 @@ document:
     de: Du befindest dich im Kommentar-Modus
   favoriteRestrictionTooltip:
     en: Log in to add the document to your favorites
-    de: Melde dich an, um dieses Dokument zu den Favoriten hinzufügen
+    de: Melde dich an, um dieses Dokument zu den Favoriten hinzuzufügen
   duplicateRestrictionTooltip:
     en: Log in to duplicate this document
     de: Melde dich an, um dieses Dokument zu duplizieren
