EDU-1243 Refer to comments more specifically as documentComments

--- a/src/components/document-comments-panel.yml
+++ b/src/components/document-comments-panel.yml
@@ -1,4 +1,4 @@
-commentsPanel:
+documentCommentsPanel:
   newCommentPlaceholder:
     en: Enter your comment here
     de: Gib hier deinen Kommentar ein
