EDU-1250 Translate easy text

--- a/src/components/pages/document.yml
+++ b/src/components/pages/document.yml
@@ -52,4 +52,4 @@ document:
     de: Version {version}
   latestHistoryVersion:
     en: Latest version
-    de: Latest version
+    de: Letzte version
