EDU-1248 Remove navigation register link

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -130,12 +130,12 @@ common:
   logIn:
     en: Log in
     de: Anmelden
+  logInAlternative:
+    en: Already have an account? Log in
+    de: Du hast schon ein Konto? Anmelden
   logOut:
     en: Log out
     de: Abmelden
-  register:
-    en: Sign up
-    de: Registrieren
   createdOn:
     en: Creation date
     de: Erstellungsdatum
