--- a/src/components/login-form.yml
+++ b/src/components/login-form.yml
@@ -8,6 +8,9 @@ loginForm:
   forgotPassword:
     en: Forgot your password?
     de: Kennwort vergessen?
+  registrationLink:
+    en: No account? Sign up
+    de: Kein Konto? Registrieren
   logInWithShibboleth:
     en: Log in with Shibboleth
     de: Mit Shibboleth anmelden
