EDU-1263 Correct translation

--- a/src/plugins/media-analysis/media-analysis.yml
+++ b/src/plugins/media-analysis/media-analysis.yml
@@ -19,4 +19,4 @@ mediaAnalysis:
     de: Sie können eine CSV-Datei in diese Box ziehen, um Segmente zu importieren
   startPlaybackFromHere:
     en: Play from this part
-    de: Die Wiedergabe ab diesem Teil starten
+    de: Ab diesem Teil abspeilen
