EDU-1248 Use better translation for account creation

--- a/src/components/homepage/homepage-oer-presentation.yml
+++ b/src/components/homepage/homepage-oer-presentation.yml
@@ -10,5 +10,5 @@ homepageOerPresentation:
       Unser Ziel ist, ein Gemeinschaftsprojekt zu schaffen, das von möglichst vielen Menschen auf der ganzen Welt getragen und unterstützt wird.
       Wenn du von der Idee des kostenlosen Lernens und einer offenen Lernplattform begeistert bist und selbst Inhalte generieren möchtest, tritt unserer Community **kostenlos** bei.
   signUp:
-    en: Sign up for your free account
-    de: Jetzt kostenlos registrieren
+    en: Create your free account
+    de: Erstelle dein kostenloses Konto
