--- a/src/components/login-form.yml
+++ b/src/components/login-form.yml
@@ -9,8 +9,8 @@ loginForm:
     en: Forgot your password?
     de: Kennwort vergessen?
   registrationLink:
-    en: No account? Sign up
-    de: Kein Konto? Registrieren
+    en: No account? Create one
+    de: Kein Konto? Erstelle eines
   logInWithShibboleth:
     en: Log in with Shibboleth
     de: Mit Shibboleth anmelden
