EDU-1262 Introduce shortDescription to users

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -230,6 +230,9 @@ common:
   description:
     en: Description
     de: Beschreibung
+  shortDescription:
+    en: Short description
+    de: Kurze Beschreibung
   url:
     en: URL
     de: URL
