EDU-1262 Introduce shortDescription to rooms

--- a/src/components/dashboard/settings-tab.yml
+++ b/src/components/dashboard/settings-tab.yml
@@ -16,7 +16,7 @@ settingsTab:
     de: Organisation
   profileOverview:
     en: Profile overview
-    de: Profil-Ansicht
+    de: Profil-Überblick
   avatarDescription:
     en: |
       Profile pictures are managed through the <0>Gravatar</0> internet service.
