--- a/src/components/pages/room.yml
+++ b/src/components/pages/room.yml
@@ -11,6 +11,9 @@ room:
   deleteRoomButton:
     en: Delete room
     de: Raum löschen
+  roomContentHeadline:
+    en: Room content
+    de: Raum-Inhalt
   roomMetadataHeadline:
     en: Room metadata
     de: Raum-Metadaten
@@ -66,3 +69,6 @@ room:
   messageEmailNotificationIconTooltip:
     en: An email was sent to all room members when this message was posted.
     de: Eine E-Mail wurde an alle Raum-Mitglieder geschickt, als diese Nachricht eingestellt wurde.
+  overview:
+    en: Overview
+    de: Überblick
