EDU-1262 Show info for shortDescription fields

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -233,6 +233,9 @@ common:
   shortDescription:
     en: Short description
     de: Kurze Beschreibung
+  shortDescriptionInfo:
+    en: This information will be shown as preview text.
+    de: This information will be shown as preview text.
   url:
     en: URL
     de: URL
