EDU-1262 Streamline missing data links and fix deleted favorites cases

--- a/src/components/user-card.yml
+++ b/src/components/user-card.yml
@@ -14,3 +14,6 @@ userCard:
   removeMember:
     en: Remove member
     de: Mitglied entfernen
+  closedAccount:
+    en: Closed account
+    de: Geschlossenes Konto
