--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -389,15 +389,9 @@ common:
   answer:
     en: Answer
     de: Antwort
-  deletedDocument:
-    en: Deleted document
-    de: Gelöschtes Dokument
   targetDeletedMessage:
     en: The target of this link has been deleted
     de: Das Ziel dieses Links wurde gelöscht
-  deletedRoom:
-    en: Deleted room
-    de: Gelöschter Raum
   reset:
     en: Reset
     de: Zurücksetzen
@@ -614,3 +608,13 @@ common:
   uploadFiles:
     en: Upload files
     de: Dateien hochladen
+  documentNotAvailable:
+    en: |
+      [Document no longer available]
+    de: |
+      [Dokument nicht mehr verfügbar]
+  roomNotAvailable:
+    en: |
+      [Room no longer available]
+    de: |
+      [Raum nicht mehr verfügbar]
