EDU-1262 Streamline unavailable data even more

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -618,3 +618,8 @@ common:
       [Room no longer available]
     de: |
       [Raum nicht mehr verfügbar]
+  accountClosed:
+    en: |
+      [This user account was closed]
+    de: |
+      [Dieses Benutzerkonto wurde geschlossen]
