EDU-1266 Lock user log in back door

--- a/src/components/pages/reset-password.yml
+++ b/src/components/pages/reset-password.yml
@@ -1,10 +1,16 @@
 resetPassword:
+  formTitle:
+    en: Steps for changing password
+    de: Schritte zur Kennwortänderung
   newPassword:
     en: New password
     de: Neues Kennwort
   requestPasswordReset:
     en: Change password
     de: Kennwort ändern
+  requestDisclaimer:
+    en: You only receive an email if you already have a confirmed account.
+    de: Du kriegst eine E-Mail nur, wenn du schon ein bestätigtes Konto hast.
   completedMessageTitle:
     en: Password changed successfully!
     de: Kennwort erfolgreich geändert!
