EDU-1266 Correct translation

--- a/src/components/pages/reset-password.yml
+++ b/src/components/pages/reset-password.yml
@@ -10,7 +10,7 @@ resetPassword:
     de: Kennwort ändern
   requestDisclaimer:
     en: You only receive an email if you already have a confirmed account.
-    de: Du kriegst eine E-Mail nur, wenn du schon ein bestätigtes Konto hast.
+    de: Du bekommst nur dann eine E-Mail, wenn du bereits ein bestätigtest Konto hast.
   completedMessageTitle:
     en: Password changed successfully!
     de: Kennwort erfolgreich geändert!
